--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,10 +7,28 @@
 	<title>Inline Styling</title>
 </head>
 
-<body>
-	<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+<body style="
+	margin:0;
+	padding:0">
+	<header style="
+	background-color: #FF0000;
+	height: 70px;
+	width: 100%;">
+	</header>
 	
-	<footer style="background-color: #00FF00; height: 60px; width: 100%; place-content: center; position: absolute; bottom: 0; display: flex;"><p style="display: flex; justify-content: center; align-items: center; text-align: center; color: black;">Best School</p></footer>
+	<footer style="
+	position: fixed;
+	display: flex;
+	background-color: #00FF00;
+	height: 60px;
+	width: 100%;
+	place-content: center;
+	bottom: 0;
+	text-align: center;
+	color: black;
+	align-items: center;">
+	Best School
+	</footer>
 </body>
 
 </html>
