--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -14,20 +14,21 @@
 	
 		footer {
 			display: flex;
+			position: fixed;
 			background-color: #00FF00;
 			height: 60px;
 			width: 100%;
 			place-content: center;
-			position: absolute;
 			bottom: 0;
-		}
-		
-		p {
-			display: flex;
-			justify-content: center;
-			align-items: center;
 			text-align: center;
 			color: black;
+			align-items: center;
+		}
+		
+
+		body {
+			margin:0;
+			padding:0;
 		}
 	</style>
 </head>
