--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Inline Styling</title>
+	<title>0. Inline styling</title>
 </head>
 
 <body style="
