--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Head styling</title>
+	<title>1. Head styling</title>
 	<style>
 		header {
 		background-color: #FF0000;
