--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -43,7 +43,7 @@
 						</ul>
 					</li>
 				</ul>
-			</nav><!-- final del main_nav_bar -->
+			</nav><!-- end of main_nav_bar -->
 		</div>
 	</header>
 	<div class="container">
@@ -79,7 +79,7 @@
 				</ul>
 			</div>
 			<button type="button" name="button">Search</button>
-		</section> <!-- end fiter-->
+		</section> <!-- end of fiter-->
 
 		<section class="places">
 			<h1>Places</h1>
@@ -92,15 +92,15 @@
 					<div class="max_guest">2 Guests</div>
 					<div class="number_rooms">1 Bedroom</div>
 					<div class="number_bathrooms">1 Bathroom</div>
-				</div><!-- end information -->
+				</div><!-- end of information -->
 				<div class="user">
 					<p><b>Owner:</b> John Lennon</p>
-				</div><!-- end user -->
+				</div><!-- end of user -->
 				<div class="description">
 					<p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It
 						locates at the center of Shanghai and next to subway line 1, 1 stop to
 						People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
-				</div><!-- end description -->
+				</div><!-- end of description -->
 				<div class="amenities">
 					<h2>Amenities</h2>
 					<ul>
@@ -131,7 +131,7 @@
 						</li>
 					</ul>
 				</div>
-			</article><!-- end My home -->
+			</article><!-- end of My home -->
 
 			<article>
 				<h2>Tiny house</h2>
@@ -140,10 +140,10 @@
 					<div class="max_guest">4 Guests</div>
 					<div class="number_rooms">2 Bedrooms</div>
 					<div class="number_bathrooms">1 Bathroom</div>
-				</div><!-- end information -->
+				</div><!-- end of information -->
 				<div class="user">
 					<p><b>Owner:</b> Aysuarex</p>
-				</div><!-- end user -->
+				</div><!-- end of user -->
 				<div class="description">
 					<p>Our place is a privete, afffordable satan-alone guest house centrally located
 						just minutes to French Quarters, downtown th Fair Grounds (Jazz Fest)
@@ -152,7 +152,7 @@
 						feel more spacious. The sofa converts to bed also. We have a hand made
 						counter area that adds character to the room and a great porch/deck to
 						relax on and have a glass of Merlot.</p>
-				</div><!-- end description -->
+				</div><!-- end of description -->
 				<div class="amenities">
 					<h2>Amenities</h2>
 					<ul>
@@ -184,10 +184,10 @@
 					<div class="max_guest">5 Guests</div>
 					<div class="number_rooms">3 Bedroom</div>
 					<div class="number_bathrooms">2 Bathroom</div>
-				</div><!-- end information -->
+				</div><!-- end of information -->
 				<div class="user">
 					<p><b>Owner:</b> Mick Jagger</p>
-				</div><!-- end user -->
+				</div><!-- end of user -->
 				<div class="description">
 					<p>First loft built by Holbies. It contains a decked terrace, jacuzzi, firepit,
 						rabbits garden, two rooms, two balconies, entrance gate, private garden,
@@ -195,7 +195,7 @@
 						luxury beds, and mountain views. Ideal for architecture lovers, romantic
 						dates, or having a good time. It is a unique space of his kind. Only
 						pets that do not harm rabbits are allowed.</p>
-				</div><!-- end description -->
+				</div><!-- end of description -->
 				<div class="amenities">
 					<h2>Amenities</h2>
 					<ul>
@@ -233,15 +233,15 @@
 					<div class="max_guest">2 Guests</div>
 					<div class="number_rooms">1 Bedroom</div>
 					<div class="number_bathrooms">1 Bathroom</div>
-				</div><!-- end information -->
+				</div><!-- end of information -->
 				<div class="user">
 					<p><b>Owner:</b>John Seena</p>
-				</div><!-- end user -->
+				</div><!-- end of user -->
 				<div class="description">
 					<p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It
 						locates at the center of Shanghai and next to subway line 1, 1 stop to
 						People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
-				</div><!-- end description -->
+				</div><!-- end of description -->
 				<div class="amenities">
 					<h2>Amenities</h2>
 					<ul>
@@ -272,7 +272,7 @@
 						</li>
 					</ul>
 				</div>
-			</article><!-- end My home -->
+			</article><!-- end of My home -->
 
 			<article><!-- My home -->
 				<div class="article_places_header">
@@ -283,15 +283,15 @@
 					<div class="max_guest">2 Guests</div>
 					<div class="number_rooms">1 Bedroom</div>
 					<div class="number_bathrooms">1 Bathroom</div>
-				</div><!-- end information -->
+				</div><!-- end of information -->
 				<div class="user">
 					<p><b>Owner:</b> John Lennon</p>
-				</div><!-- end user -->
+				</div><!-- end of user -->
 				<div class="description">
 					<p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It
 						locates at the center of Shanghai and next to subway line 1, 1 stop to
 						People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
-				</div><!-- end description -->
+				</div><!-- end of description -->
 				<div class="amenities">
 					<h2>Amenities</h2>
 					<ul>
@@ -322,7 +322,7 @@
 						</li>
 					</ul>
 				</div>
-			</article><!-- end My home -->
+			</article><!-- end of My home -->
 
 			<article><!-- My home -->
 				<div class="article_places_header">
@@ -333,15 +333,15 @@
 					<div class="max_guest">8 Guests</div>
 					<div class="number_rooms">1 Bedroom</div>
 					<div class="number_bathrooms">1 Bathroom</div>
-				</div><!-- end information -->
+				</div><!-- end of information -->
 				<div class="user">
 					<p><b>Owner:</b> John Lennon</p>
-				</div><!-- end user -->
+				</div><!-- end of user -->
 				<div class="description">
 					<p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It
 						locates at the center of Shanghai and next to subway line 1, 1 stop to
 						People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
-				</div><!-- end description -->
+				</div><!-- end of description -->
 				<div class="amenities">
 					<h2>Amenities</h2>
 					<ul>
@@ -372,9 +372,9 @@
 						</li>
 					</ul>
 				</div>
-			</article><!-- end My home -->
+			</article><!-- end of My home -->
 
-		</section> <!-- end section -->
+		</section> <!-- end of section -->
 	</div>
 	<footer aria-label="Footer brand information">
 		<p>Best School</p>
