--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -48,7 +48,7 @@
 					</ul>
 				</div>
 				<button type="button" name="button">Search</button>
-			</section> <!-- end fiter-->
+			</section> <!-- end of fiter-->
 	
 			<section class="places">
 				<h1>Places</h1>
@@ -61,15 +61,15 @@
 						<div class="max_guest">2 Guests</div>
 						<div class="number_rooms">1 Bedroom</div>
 						<div class="number_bathrooms">1 Bathroom</div>
-					</div><!-- end information -->
+					</div><!-- end of information -->
 					<div class="user">
 						<p><b>Owner:</b> John Lennon</p>
-					</div><!-- end user -->
+					</div><!-- end of user -->
 					<div class="description">
 						<p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It
 							locates at the center of Shanghai and next to subway line 1, 1 stop to
 							People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
-					</div><!-- end description -->
+					</div><!-- end of description -->
 					<div class="amenities">
 						<h2>Amenities</h2>
 						<ul>
@@ -100,7 +100,7 @@
 							</li>
 						</ul>
 					</div>
-				</article><!-- end My home -->
+				</article><!-- end of My home -->
 	
 				<article>
 					<h2>Tiny house</h2>
@@ -109,10 +109,10 @@
 						<div class="max_guest">4 Guests</div>
 						<div class="number_rooms">2 Bedrooms</div>
 						<div class="number_bathrooms">1 Bathroom</div>
-					</div><!-- end information -->
+					</div><!-- end of information -->
 					<div class="user">
 						<p><b>Owner:</b> Addrienne</p>
-					</div><!-- end user -->
+					</div><!-- end of user -->
 					<div class="description">
 						<p>Our place is a privete, afffordable satan-alone guest house centrally located
 							just minutes to French Quarters, downtown th Fair Grounds (Jazz Fest)
@@ -121,7 +121,7 @@
 							feel more spacious. The sofa converts to bed also. We have a hand made
 							counter area that adds character to the room and a great porch/deck to
 							relax on and have a glass of Merlot.</p>
-					</div><!-- end description -->
+					</div><!-- end of description -->
 					<div class="amenities">
 						<h2>Amenities</h2>
 						<ul>
@@ -152,10 +152,10 @@
 						<div class="max_guest">5 Guests</div>
 						<div class="number_rooms">3 Bedroom</div>
 						<div class="number_bathrooms">2 Bathroom</div>
-					</div><!-- end information -->
+					</div><!-- end of information -->
 					<div class="user">
 						<p><b>Owner:</b> Mick Jagger</p>
-					</div><!-- end user -->
+					</div><!-- end of user -->
 					<div class="description">
 						<p>First loft built by Holbies. It contains a decked terrace, jacuzzi, firepit,
 							rabbits garden, two rooms, two balconies, entrance gate, private garden,
@@ -163,7 +163,7 @@
 							luxury beds, and mountain views. Ideal for architecture lovers, romantic
 							dates, or having a good time. It is a unique space of his kind. Only
 							pets that do not harm rabbits are allowed.</p>
-					</div><!-- end description -->
+					</div><!-- end of description -->
 					<div class="amenities">
 						<h2>Amenities</h2>
 						<ul>
@@ -191,7 +191,7 @@
 						</ul>
 					</div>
 				</article>
-			</section> <!-- end section -->
+			</section> <!-- end of section -->
 		</div>
 		<footer>
 			<p>Best School</p>
